# UrConnect

./: .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  README.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  THIRD_PARTY_NOTICES.md  version.h
.github/: PULL_REQUEST_TEMPLATE.md
SNDAApp/: Calculation.cpp  Calculation.h  GraphDefine.h  Primitives.h  ShapeFileAccessor.cpp  ShapeFileAccessor.h  ShapeObject.cpp  ShapeObject.h  Shapefile.cpp  Shapefile.h  TimeLimit.h  stdafx.cpp  stdafx.h
depthmapX/: Attributes.h  AttributesWin.cpp  AttributesWin.h  CMakeLists.txt  CSVProcess.cpp  CSVProcess.h  CalculateUI.cpp  CalculateUI.h  Definition.h  Display.cpp  Display.h  GeoMap.cpp  GeoMap.h  GlobalMap.cpp  GlobalMap.h  GraphDoc.cpp  GraphDoc.h  Highlight.cpp  Highlight.h  NetMap.cpp  NetMap.h  ScaleWin.cpp  ScaleWin.h  Select.cpp  Select.h  Subset.cpp  Subset.h  UrbanConnectAnalyzer.cpp  UrbanConnectAnalyzer.h  compatibilitydefines.h  coreapplication.cpp  coreapplication.h  icons.aps  indexWidget.cpp  indexWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindowfactory.cpp  mainwindowfactory.h  (+18 more)
depthmapX/UI/: AboutDlg.ui  AgentAnalysisDlg.ui  AttributeChooserDlg.ui  AttributeSummary.ui  AttributesWin.ui  AxialAnalysisOptionsDlg.ui  CalculateUI.ui  ColourScaleDlg.ui  ColumnPropertiesDlg.ui  ConvertShapesDlg.ui  DepthmapAlert.ui  DepthmapOptionsDlg.ui  EditConnectionsDlg.ui  FewestLineOptionsDlg.ui  FilePropertiesDlg.ui  FindLocDlg.ui  GridDialog.ui  Highlight.ui  InsertColumnDlg.ui  IsovistPathDlg.ui  LayerChooserDlg.ui  LicenceDialog.ui  MRDlg.ui  MakeLayerDlg.ui  MakeOptionsDlg.ui  NewLayerDlg.ui  OptionsDlg.ui  PromptReplace.ui  PushDialog.ui  RenameObjectDlg.ui  ScaleWin.ui  SegmentAnalysisDlg.ui  Select.ui  Subset.ui  TopoMetDlg.ui  UrbanConnectAnalyzer.ui  licenseagreement.ui  newwindow.ui  setForm.ui
depthmapX/dialogs/: AboutDlg.cpp  AboutDlg.h  AgentAnalysisDlg.cpp  AgentAnalysisDlg.h  AttributeChooserDlg.cpp  AttributeChooserDlg.h  AttributeSummary.cpp  AttributeSummary.h  AxialAnalysisOptionsDlg.cpp  AxialAnalysisOptionsDlg.h  CMakeLists.txt  ColourScaleDlg.cpp  ColourScaleDlg.h  ColumnPropertiesDlg.cpp  ColumnPropertiesDlg.h  ConvertShapesDlg.cpp  ConvertShapesDlg.h  EditConnectionsDlg.cpp  EditConnectionsDlg.h  FewestLineOptionsDlg.cpp  FewestLineOptionsDlg.h  FilePropertiesDlg.cpp  FilePropertiesDlg.h  FindLocDlg.cpp  FindLocDlg.h  GridDialog.cpp  GridDialog.h  InsertColumnDlg.cpp  InsertColumnDlg.h  IsovistPathDlg.cpp  IsovistPathDlg.h  LayerChooserDlg.cpp  LayerChooserDlg.h  LicenceDialog.cpp  LicenceDialog.h  MRDlg.cpp  MRDlg.h  MakeLayerDlg.cpp  MakeLayerDlg.h  MakeOptionsDlg.cpp  (+17 more)
depthmapX/dialogs/settings/: generalpage.cpp  generalpage.h  interfacepage.cpp  interfacepage.h  settingsdialog.cpp  settingsdialog.h  settingspage.h
depthmapX/resources/: Info.plist
depthmapX/views/: CMakeLists.txt  mapview.cpp  mapview.h  viewhelpers.cpp  viewhelpers.h
depthmapX/views/3dview/: 3dview.cpp  3dview.h
depthmapX/views/depthmapview/: depthmapview.cpp  depthmapview.h
depthmapX/views/glview/: gldynamicline.cpp  gldynamicline.h  gldynamicrect.cpp  gldynamicrect.h  gllines.cpp  gllines.h  gllinesuniform.cpp  gllinesuniform.h  glpointmap.cpp  glpointmap.h  glpolygons.cpp  glpolygons.h  glrastertexture.cpp  glrastertexture.h  glregularpolygons.cpp  glregularpolygons.h  glshapegraph.cpp  glshapegraph.h  glshapemap.cpp  glshapemap.h  gltriangles.cpp  gltriangles.h  gltrianglesuniform.cpp  gltrianglesuniform.h  glutriangulator.cpp  glutriangulator.h  glview.cpp  glview.h
depthmapX/views/plotview/: plotview.cpp  plotview.h
depthmapX/views/tableview/: tableview.cpp  tableview.h
docs/: README.md  README.zh-CN.md  requirements.txt
genlib/: CMakeLists.txt  bsptree.cpp  bsptree.h  comm.h  containerutils.h  exceptions.h  linreg.h  p2dpoly.cpp  p2dpoly.h  pafmath.cpp  pafmath.h  pflipper.h  readwritehelpers.h  simplematrix.h  stringutils.cpp  stringutils.h  xmlparse.cpp  xmlparse.h
mgraph440/: CMakeLists.txt  attr.cpp  attr.h  attributes.cpp  attributes.h  axialmap.cpp  axialmap.h  bspnode.h  comm.h  connector.cpp  connector.h  containerutils.h  datalayer.cpp  datalayer.h  displayparams.h  exceptions.h  fileproperties.h  (+30 more)
salalib/: CMakeLists.txt  alllinemap.cpp  alllinemap.h  attributetable.cpp  attributetable.h  attributetablehelpers.h  attributetableindex.cpp  attributetableindex.h  attributetableview.cpp  attributetableview.h  axialmap.cpp  axialmap.h  axialminimiser.cpp  axialminimiser.h  axialpolygons.cpp  axialpolygons.h  connector.cpp  connector.h  displayparams.h  entityparsing.cpp  entityparsing.h  fileproperties.h  geometrygenerators.cpp  geometrygenerators.h  gridproperties.cpp  gridproperties.h  iaxial.h  importtypedefs.h  importutils.cpp  importutils.h  isegment.h  isovist.cpp  isovist.h  isovistdef.h  ivga.h  layermanager.h  layermanagerimpl.cpp  layermanagerimpl.h  linkutils.cpp  linkutils.h  (+28 more)
salalib/agents/: CMakeLists.txt  agent.cpp  agent.h  agentengine.cpp  agentengine.h  agentga.cpp  agentga.h  agenthelpers.h  agentprogram.cpp  agentprogram.h  agentset.cpp  agentset.h
salalib/axialmodules/: CMakeLists.txt  axialhelpers.h  axialintegration.cpp  axialintegration.h  axialstepdepth.cpp  axialstepdepth.h
salalib/parsers/: CMakeLists.txt  dxfp.cpp  dxfp.h  mapinfodata.cpp  mapinfodata.h  ntfp.cpp  ntfp.h  tigerp.cpp  tigerp.h
salalib/segmmodules/: CMakeLists.txt  segmangular.cpp  segmangular.h  segmhelpers.h  segmmetric.cpp  segmmetric.h  segmmetricpd.cpp  segmmetricpd.h  segmtopological.cpp  segmtopological.h  segmtopologicalpd.cpp  segmtopologicalpd.h  segmtulip.cpp  segmtulip.h  segmtulipdepth.cpp  segmtulipdepth.h
salalib/vgamodules/: CMakeLists.txt  vgaangular.cpp  vgaangular.h  vgaangulardepth.cpp  vgaangulardepth.h  vgaisovist.cpp  vgaisovist.h  vgametric.cpp  vgametric.h  vgametricdepth.cpp  vgametricdepth.h  vgathroughvision.cpp  vgathroughvision.h  vgavisualglobal.cpp  vgavisualglobal.h  vgavisualglobaldepth.cpp  vgavisualglobaldepth.h  vgavisuallocal.cpp  vgavisuallocal.h
(+48 files in other folders)
